docs/apache-airflow-providers-slack/8.2.0/_sources/_api/airflow/providers/slack/notifications/slack_webhook/index.rst.txt
:py:mod:`airflow.providers.slack.notifications.slack_webhook`
=============================================================

.. py:module:: airflow.providers.slack.notifications.slack_webhook


Module Contents
---------------

Classes
~~~~~~~

.. autoapisummary::

   airflow.providers.slack.notifications.slack_webhook.SlackWebhookNotifier




Attributes
~~~~~~~~~~

.. autoapisummary::

   airflow.providers.slack.notifications.slack_webhook.send_slack_webhook_notification


.. py:class:: SlackWebhookNotifier(*, slack_webhook_conn_id = SlackWebhookHook.default_conn_name, text, blocks = None, unfurl_links = None, unfurl_media = None, proxy = None, timeout = None, attachments = None)


   Bases: :py:obj:`airflow.notifications.basenotifier.BaseNotifier`

   Slack Incoming Webhooks Notifier.

   .. note::
       ``SlackWebhookNotifier`` provide integration with Slack Incoming Webhooks,
       and may not function accurately within Legacy Slack Integration Incoming Webhook.

   :param slack_webhook_conn_id: :ref:`Slack Incoming Webhook <howto/connection:slack>`
       connection id that has Incoming Webhook token in the password field.
   :param text: The content of the message
   :param blocks: A list of blocks to send with the message. Optional
   :param unfurl_links: Option to indicate whether text url should unfurl. Optional
   :param unfurl_media: Option to indicate whether media url should unfurl. Optional
   :param timeout: The maximum number of seconds the client will wait to connect. Optional
       and receive a response from Slack. If not set than default WebhookClient value will use.
   :param proxy: Proxy to make the Slack Incoming Webhook call. Optional
   :param attachments: A list of attachments to send with the message. Optional

   .. py:attribute:: template_fields
      :value: ('slack_webhook_conn_id', 'text', 'attachments', 'blocks', 'proxy', 'timeout')

      

   .. py:method:: hook()

      Slack Incoming Webhook Hook.


   .. py:method:: notify(context)

      Send a message to a Slack Incoming Webhook.



.. py:data:: send_slack_webhook_notification

   

